[package]
name = "MuteEDR"
version = "0.1.0"
edition = "2021"

[dependencies]
ipnet = "2.10"
ipnetwork = "0.21"
ctrlc = "3.4"
windows-core = "0.59.0"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_NetworkManagement",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Rpc",
    "Win32_Security",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
]
